[package]
name = "socket"
version = "0.1.0"
authors = ["dickson <dev.dicksontung@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7.1"
tokio = { version = "0.2.11", features = ["full"] }
tokio-tungstenite = "0.10.1"
tungstenite = "0.10.1"
futures = "0.3.4"
log = "0.4.8"
config = "0.10.1"
redis = "0.15.1"
uuid = { version="0.8.1", features = ["v4"]}
dashmap = "3.4.4"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
